# cc_token_saver_mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.cfg
cc_token_saver_mcp/: server.py
data/: cz.vitexsoftware.cc-token-saver-mcp.metainfo.xml
debian/: Jenkinsfile  README.Debian  README.source  cc-token-saver-mcp.1  changelog  control  copyright  cz.vitexsoftware.cc-token-saver-mcp.metainfo.xml  python3-cc-token-saver-mcp.install  python3-cc-token-saver-mcp.manpages  rules  watch
man/: cc-token-saver-mcp.1
tests/: test_server.py
