[metadata]
name = cc-token-saver-mcp
version = 1.0.0
description = MCP server that delegates simple tasks to a local LLM to save Claude Code tokens
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.10

[options]
packages = find:
install_requires =
    fastmcp
    openai
    python-dotenv

[options.entry_points]
console_scripts =
    cc-token-saver-mcp = cc_token_saver_mcp.server:main
